# hello-cmake-cxx

./: .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake  Doxyfile.cmake  winhelper.cmake
examples/: Readme.md
source/: CMakeLists.txt  hello.cxx  hello.h  hello.h.in  mymath.cxx  mymath.h
